--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -49,7 +49,7 @@
 
                                         </div>
                                         <div class="form-group submit">
-                                            <input type="submit" placeholder="City" class="form-control" />
+                                            <input type="submit" placeholder="City" class="form-control" value="Submit" />
                                         </div>
 
                                     </form>
@@ -69,7 +69,7 @@
                                             <p>70%</p>
 
                                         </div>
-                                        <h5>Total Customers</h5> 
+                                        <h5 class="blue">Total Customers</h5> 
                                         <span class="blue"><span class="percentage" style="width: 20%"></span></span>
                                     </div>
                                 </div>
@@ -83,7 +83,7 @@
                                             <p>70%</p>
 
                                         </div>
-                                        <h5>Total Business</h5> 
+                                        <h5 class="purpal">Total Business</h5> 
                                         <span class="purpal"><span class="percentage" style="width: 90%"></span></span>
                                     </div>
                                 </div>
@@ -97,7 +97,7 @@
                                             <p>70%</p>
                                             
                                         </div>
-                                        <h5>Total Products</h5> 
+                                        <h5 class="green">Total Products</h5> 
                                         <span class="green"><span class="percentage" style="width: 30%"></span></span>
                                     </div>
                                 </div>
@@ -110,7 +110,7 @@
                                             <h4>5412</h4>
                                             <p>70%</p>
                                         </div>
-                                        <h5>Total Users</h5> 
+                                        <h5 class="maron">Total Users</h5> 
                                         <span class="maron"><span class="percentage" style="width: 70%"></span></span>
                                     </div>
                                 </div>
@@ -122,7 +122,7 @@
                             <div class="row">
                                 <div class="col-md-6">
 
-                                    <div class="panel-widget">
+                                    <div class="panel-widget c3chart">
                                         <h3  class="chart_head">Pending Customers</h3>
                                         <div id="customer_chart">
 
@@ -132,7 +132,7 @@
                                 </div>
                                 <div class="col-md-6">
 
-                                    <div class="panel-widget">
+                                    <div class="panel-widget c3chart">
                                         <h3 class="chart_head">Pending Vendors</h3>
                                         <div id="vendor_chart">
 
@@ -233,7 +233,7 @@
                             <div class="row">
                                 <div class="col-md-6">
 
-                                    <div class="panel-widget">
+                                    <div class="panel-widget c3chart">
                                         <h3  class="chart_head">Top shop</h3>
                                         <div id="top_shop_chart">
 
@@ -243,7 +243,7 @@
                                 </div>
                                 <div class="col-md-6">
 
-                                    <div class="panel-widget">
+                                    <div class="panel-widget c3chart">
                                         <h3 class="chart_head">Top category</h3>
                                         <div id="top_category_chart">
 
