--- a/business.html
+++ b/business.html
@@ -39,7 +39,7 @@
                                 </div>
                                 <div id="navbar" class="navbar-collapse collapse no-padding" aria-expanded="false" style="height: 1px;">
                                     <ul class="nav navbar-nav">
-                                        <li class="phoneNumber">Need help : <span class="bold">+ 1234567890</span></li>
+                                        <li class="phoneNumber">Need help : <span class="bold"><a href="tel:+7676767">+ 1234567890</a></span></li>
                                         <li class="active"><a href="business_login.html" class="btn btn-lg">LOG IN</a></li>
                                         <li><a href="business_signup.html" class="btn btn-lg">SIGN UP</a></li>
                                     </ul>
