--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -27,10 +27,51 @@
 
     <body>
 
+        <header>
+            <div class="nav nav-default">
+                <div class="container">
+                    <div class="nav-bar">
+                        <ul>
+                            <li>
+
+                            </li>
+                        </ul>  
+                    </div>
+                </div>  
+            </div>
+        </header>
         <section class="admin_dashboard">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                            <div class="toast-header">
+                                <img src="..." class="rounded mr-2" alt="...">
+                                <strong class="mr-auto">Bootstrap</strong>
+                                <small class="text-muted">just now</small>
+                                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="toast-body">
+                                See? Just like this.
+                            </div>
+                        </div>
+
+                        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                            <div class="toast-header">
+                                <img src="..." class="rounded mr-2" alt="...">
+                                <strong class="mr-auto">Bootstrap</strong>
+                                <small class="text-muted">2 seconds ago</small>
+                                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="toast-body">
+                                Heads up, toasts will stack automatically
+                            </div>
+                        </div>
+
                         <h2 class="dash_title">Admin dash board</h2>
                         <p class="dash_title"> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia </p>
 
@@ -95,7 +136,7 @@
                                         <div class="info-meta">
                                             <h4>5412</h4>
                                             <p>70%</p>
-                                            
+
                                         </div>
                                         <h5 class="green">Total Products</h5> 
                                         <span class="green"><span class="percentage" style="width: 30%"></span></span>
