--- a/product_detail.html
+++ b/product_detail.html
@@ -345,6 +345,7 @@
                                 <a href="facebook.com"><i class="icon-envelope-alt"></i></a>
                             </span>
                             <p class="price">
+                                <img src="images/qrcode.png" class="img-responsive qr" />
                                 <del>Rs. 4109</del><span class="item_price">Rs. 3500</span><span class="green caps">(60% OFF)</span>
                             </p>
                             <p class="ava">AVAILABILITY : <span class="grey">In stock</span></p>
